--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
 
-    <script src="src/index.js" type="text/javascript"></script>
+    <!-- <script src="src/index.js" type="text/javascript"></script> -->
+    <script src="src/random.js" type="text/javascript"></script>
+
 
   </head>
   <body>
