--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>AlwaysNote</title>
+    <title>Programming Art</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.scss" media="screen" />
 
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
 
-    <!-- <script src="src/index.js" type="text/javascript"></script> -->
-    <script src="src/random.js" type="text/javascript"></script>
+    <script src="src/index.js" type="text/javascript"></script>
+    <!-- <script src="src/random.js" type="text/javascript"></script> -->
     <!-- <script src="src/moire.js" type="text/javascript"></script> -->
 
 
   </head>
   <body>
+    <h1 className='title'>Wall Drawing #17</h1>
+    <h2 className='description'>Four-part drawing with a different line direction in each part.</h2>
     <ul id='notes-list'></ul>
     <div id='update'></div>
   </body>
